# big-o-estimator

./: README.md  pyproject.toml
big_o/: timer.py  visualize.py
big_o/curve_fitting/: estimator.py  estimator_tf.py  features.py
tests/: test.py  test_estimator.py
