[tool.poetry]
name = "big-o"
version = "0.1.0"
description = ""
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1"
sklearn = "^0.0"
pandas = "^1.2.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
mypy = "^0.800"
jupyter = "^1.0.0"
plotly = "^4.14.3"
tensorflow = "^2.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
